# ros_ws2

install/: local_setup.sh  setup.sh
install/ipc_ros_wrapper/lib/ipc_ros_wrapper/: dummy_publisher  ipc_subscriber
install/ipc_ros_wrapper/share/ipc_ros_wrapper/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/ipc_ros_wrapper/: package.xml  setup.cfg  setup.py
src/ipc_ros_wrapper/ipc_ros_wrapper/: dummy_publisher.py  ipc_wrapper.py
