<?xml version="1.0"?>
<package format="3">
  <name>ipc_ros_wrapper</name>
  <version>0.0.0</version>
  <description>IPC ROS Wrapper for IPC Communication</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

